--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <!-- about.html -->
-      <div class="post">
+      <div class="post about">
         <header class="post-header">
           <h1 class="post-title">
             {% if site.title == "blank" -%}{{ site.last_name }} {{ site.middle_name }} <span class="font-weight-bold">{{ site.first_name }}</span>{%- else -%}{{ site.title }}{%- endif %}
