--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,7 +15,7 @@ layout: default
 
 {% assign url_beginning = page.url | slice: 0, 6 %}
 
-<div class="post">
+<div class="post blog-font">
 
   <header class="post-header">
     <h1 class="post-title">{{ page.title }}</h1>
