--- a/_includes/social.html
+++ b/_includes/social.html
@@ -112,6 +112,9 @@
             {%- if site.rss_icon -%}
             <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
             {% endif %}
+            {%- if site.cv_pdf -%}
+            <a href="{{ site.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" title="CV"><i class="ai ai-cv"></i></a>
+            {% endif %}
             {%- if site.wechat_qr -%}
             <a id="WeChatBtn" title="WeChat"><i class="fa-brands fa-weixin"></i></a>
             <div id="WeChatMod" class="wechat-modal">
