--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -61,7 +61,7 @@ layout: default
 
               <!-- interests and education -->
               <div>
-                <h3 class="section-subheading">Interests</h3>
+                <h3 class="section-subheading">research interests</h3>
                 <ul class="ul-interests mb-0">
                   {% for interest in page.interests %}
                   <li>{{ interest }}</li>
@@ -70,7 +70,7 @@ layout: default
               </div>
     
               <div>
-                <h3 class="section-subheading">Education</h3>
+                <h3 class="section-subheading">academic career</h3>
                 <ul class="ul-edu fa-ul mb-0">
                   {% for edu in page.education %}
                   <li>
