--- a/_sass/_user-defined.scss
+++ b/_sass/_user-defined.scss
@@ -27,7 +27,7 @@ strong {
 
 .navbar-brand,
 .navbar-brand span,
-.nav-item,
+// .nav-item,
 .heading-accent,
 h1,
 h1 span,
@@ -36,7 +36,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Spectral";
+  font-family: "Amiri";
 }
 
 p,
