--- a/_includes/scripts/headingcolor.html
+++ b/_includes/scripts/headingcolor.html
@@ -2,14 +2,14 @@
   <!-- Color the first 3 letters of a heading except h1 -->
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      var headings = document.querySelectorAll('h2, h3, h4, h5, h6');
+      var headings = document.querySelectorAll('h2, .about h3');
 
       headings.forEach(function(heading) {
-        if (heading.tagName.toLowerCase() !== 'h1') {
+        // if (heading.tagName.toLowerCase() !== 'h1') {
           var text = heading.textContent;
           var coloredText = '<span class="heading-accent">' + text.slice(0, 3) + '</span>' + text.slice(3);
           heading.innerHTML = coloredText;
-        }
+        // }
       });
     });
   </script>
