--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,12 +4,12 @@
  ******************************************************************************/
 
 // Colors
-$red-color:           #FF3636 !default;
+$red-color:           #BF616A !default;
 $red-color-dark:      #B71C1C !default;
 $orange-color:        #F29105 !default;
 $blue-color:          #0076df !default;
 $blue-color-dark:     #00369f !default;
-$cyan-color:          #2698BA !default;
+$cyan-color:          #B48EAD !default;
 $light-cyan-color:    lighten($cyan-color, 25%);
 $green-color:         #00ab37 !default;
 $green-color-lime:    #B7D12A !default;
@@ -20,15 +20,15 @@ $purple-color:        #85023E !default;
 $light-purple-color:  lighten($purple-color, 25%);
 $pink-color:          #f92080 !default;
 $pink-color-light:    #ffdddd !default;
-$yellow-color:        #efcc00 !default;
+$yellow-color:        #EBCB8B !default;
 
-$grey-color:          #828282 !default;
-$grey-color-light:    lighten($grey-color, 40%);
-$grey-color-dark:     #1C1C1D;
-$grey-900:            #212529;
+$grey-color:          #ABB9CF !default;
+$grey-color-light:    #4C566A !default;
+$grey-color-dark:     #242933;
+$grey-900:            #2E3440;
 
 $white-color: #ffffff !default;
-$black-color: #000000 !default;
+$black-color: #2E3440 !default;
 
 // Theme colors
 
