--- a/_includes/scripts/headingcolor.html
+++ b/_includes/scripts/headingcolor.html
@@ -2,7 +2,7 @@
   <!-- Color the first 3 letters of a heading except h1 -->
   <script>
     document.addEventListener('DOMContentLoaded', function() {
-      var headings = document.querySelectorAll('h2, .about h3');
+      var headings = document.querySelectorAll('.publications h2, .projects h2');
 
       headings.forEach(function(heading) {
         // if (heading.tagName.toLowerCase() !== 'h1') {
