--- a/_sass/_custom-styles.scss
+++ b/_sass/_custom-styles.scss
@@ -142,7 +142,7 @@ table th {
 }
 
 .section-subheading {
-  font-size: calc(var(--main-size) + 0.25rem);
+  font-size: 1.25em;
   font-weight: 500;
   margin-top: 1rem;
   margin-bottom: 0.5rem;
