change social icons

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -38,7 +38,7 @@
             <a href="https://github.com/{{ site.github_username }}" title="GitHub"><i class="fa-brands fa-github"></i></a>
             {% endif %}
             {%- if site.linkedin_username -%}
-            <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn"><i class="fa-brands fa-linkedin-in"></i></a>
             {% endif %}
             {%- if site.x_username -%}
             <a href="https://twitter.com/{{ site.x_username }}" title="X"><i class="fa-brands fa-x-twitter"></i></a>
@@ -112,9 +112,9 @@
             {%- if site.rss_icon -%}
             <a href="{{ site.baseurl }}/feed.xml" title="RSS Feed"><i class="fa-solid fa-square-rss"></i></a>
             {% endif %}
-            {%- if site.cv_pdf -%}
+            <!-- {%- if site.cv_pdf -%}
             <a href="{{ site.cv_pdf | prepend: 'assets/pdf/' | relative_url}}" target="_blank" rel="noopener noreferrer" title="CV"><i class="ai ai-cv"></i></a>
-            {% endif %}
+            {% endif %} -->
             {%- if site.wechat_qr -%}
             <a id="WeChatBtn" title="WeChat"><i class="fa-brands fa-weixin"></i></a>
             <div id="WeChatMod" class="wechat-modal">
